--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@netlify/plugin-nextjs": "^5.12.1",
     "babel-plugin-styled-components": "^2.1.4",
     "firebase": "^12.1.0",
     "next": "15.4.5",
