--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@netlify/plugin-nextjs": "^5.12.1",
+    "axios": "^1.11.0",
     "babel-plugin-styled-components": "^2.1.4",
     "firebase": "^12.1.0",
     "next": "15.4.5",
