--- a/package.json
+++ b/package.json
@@ -11,12 +11,23 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@netlify/plugin-nextjs": "^5.12.1",
+    "@prisma/client": "^6.15.0",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.11.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "firebase": "^12.1.0",
+    "better-auth": "^1.3.9",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.543.0",
     "next": "15.4.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-to-print": "^3.1.1",
+    "resend": "^6.0.3",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
@@ -27,6 +38,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
