--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "babel-plugin-styled-components": "^2.1.4",
     "better-auth": "^1.3.9",
     "firebase": "^12.2.1",
-    "firebase-admin": "^13.5.0",
+    "firebase-admin": "^11.11.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.543.0",
     "next": "15.4.5",
+    "nodemailer": "^7.0.6",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^7.9.3",
     "react-to-print": "^3.1.1",
+    "recharts": "^3.2.1",
     "resend": "^6.0.3",
     "styled-components": "^6.1.19"
   },
