--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@getbrevo/brevo": "^3.0.1",
     "@netlify/plugin-nextjs": "^5.12.1",
     "@prisma/client": "^6.15.0",
     "@react-pdf/renderer": "^4.3.0",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "babel-plugin-styled-components": "^2.1.4",
     "better-auth": "^1.3.9",
     "firebase": "^12.2.1",
@@ -33,7 +34,9 @@
     "react-to-print": "^3.1.1",
     "recharts": "^3.2.1",
     "resend": "^6.0.3",
-    "styled-components": "^6.1.19"
+    "sib-api-v3-sdk": "^8.5.0",
+    "styled-components": "^6.1.19",
+    "twilio": "^5.10.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
